fix sidebar nav to correct height
merge this to make scroll bar does not too high to contained in screen.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -72,12 +72,12 @@ a:hover {
   text-align: center;
 }
 .sidebar__nav {
-  max-height: 100%;
+  max-height: calc(100% - 130px);
   overflow-y: auto;
 }
 .sidebar__nav-interior {
   height: 100%;
-  padding: 40px 40px 170px;
+  padding: 40px;
 }
 .sidebar a {
   color: #000;
